# GpuLithoLib

./: .gitignore  CMakeLists.txt  README.md
examples/: example_usage.cu  test_intersection.cu
include/: GpuLithoLib.h  gpuLitho.h  operation_types.h
src/: ContourProcessing.cu  ContourProcessing.cuh  GpuKernelProfiler.cu  GpuKernelProfiler.cuh  GpuLithoEngine.cuh  GpuLithoLib.cu  GpuOperations.cu  GpuOperations.cuh  IntersectionCompute.cu  IntersectionCompute.cuh  LayerImpl.cu  LayerImpl.h  RawContourDetectEngine.cu  RawContourDetectEngine.cuh  SimplifyContourEngine.cu  SimplifyContourEngine.cuh  operation_types.cu
testdata/: synopsys_simplified_fixed.txt
